# cme466

asns/asn2/: .gitignore  README.md  pmi479-jep452-Lab2-Part1_publisher.py  pmi479-jep452-Lab2-Part1_subscriber.py  pyproject.toml
asns/asn3/adminPC/smart-parking/src-tauri/: Cargo.toml  pyproject.toml  tauri.conf.json
asns/asn3/adminPC/smart-parking/src-tauri/python/tauri_app/: __init__.py  commands.py  models.py
asns/asn3/adminPC/smart-parking/src-tauri/src/: main.rs
asns/asn3/rpi/: .env.example  command-schema.json  config.py  main.py  pyproject.toml
asns/asn3/rpi/src/: gpio_worker.py  mqtt_worker.py
asns/asn3J/: pyproject.toml
asns/asn4/: .gitattributes  asn4_p1.ipynb  asn4_p1j.ipynb  asn4_p2.ipynb  asn4_p3.ipynb  asn4_p3_simple_pipeline.ipynb  asn4_p4.ipynb  pyproject.toml
asns/asn5O/: Deliverable_5_template.ipynb
class_example_code/FaceDetection/: README.md  lib requirements.txt
class_example_code/Neural Network/: CME466_Intro_NNs_00a.ipynb  CME466_Intro_NNs_01a.ipynb  CME466_Intro_NNs_01b.ipynb
class_example_code/OpenCV/: imgpro_module1a.ipynb  universal_cv_gui.md  universal_cv_gui.py
class_example_code/OpenCV/pipeline_lab/: README.md  pipeline_export2.ipynb  pyproject.toml
class_example_code/OpenCV/pipeline_lab/src/cv_pipeline_lab/: main.py
class_example_code/OpenCV/pipeline_lab/src/cv_pipeline_lab/blocks/: __init__.py  base.py  concept_blocks.py  detection_blocks.py  io_blocks.py  processing_blocks.py  utils.py
class_example_code/OpenCV/pipeline_lab/src/cv_pipeline_lab/core/: __init__.py  executor.py  export_notebook.py  export_python.py  graph.py  registry.py  serialization.py  snippets.py  types.py
class_example_code/OpenCV/pipeline_lab/src/cv_pipeline_lab/ui/: block_palette.py  main_window.py  node_scene.py  preview_panel.py  properties_panel.py
class_example_code/OpenCV/pipeline_lab/tests/: test_blocks.py  test_executor.py  test_exports.py  test_graph.py  test_serialization.py
class_example_code/YOLO/: CME466_YOLO.ipynb
class_example_code/imgs/: blown_ic.tif  build.tif  ckt_noisy.tif  ckt_ori.tif  skeleton.tif  test_pat.tif  test_pat3.tif  woman.tif
class_example_code/module1/: 10_object_tracking.py  11_a_simple_thresholding.py  11_a_simple_thresholding_img.py  11_b_adaptive_thresholding.py  12_edge_detection.py  12_edge_detection_img.py  13_contours_img.py  14_face_detection.py  14_face_detection_img.py  1_read_write_img.py  2_img_shape.py  3_color_channels.py  4_color_spaces.py  (+21 more)
scripts/: cleanup_venvs.py
(+110 files in other folders)
