[project]
name = "cv-pipeline-lab"
version = "0.1.0"
description = "Node-based visual pipeline GUI for CME 466 image processing and detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "opencv-python>=4.13.0.92",
  "numpy>=2.2.0",
  "pyside6>=6.10.0",
  "nbformat>=5.10.4",
  "matplotlib>=3.10.0",
]

[project.scripts]
cv-pipeline-lab = "cv_pipeline_lab.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_pipeline_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
